# efm32g-pacs

./: README.md  tools.py
pacs/efm32g/: Cargo.toml  README.md  build.rs
pacs/efm32g/efm32g200/: Cargo.toml
pacs/efm32g/efm32g200/src/: lib.rs
pacs/efm32g/efm32g210/: Cargo.toml
pacs/efm32g/efm32g222/: Cargo.toml
pacs/efm32g/efm32g230/: Cargo.toml
pacs/efm32g/efm32g232/: Cargo.toml
pacs/efm32g/efm32g280/: Cargo.toml
pacs/efm32g/efm32g290/: Cargo.toml
pacs/efm32g/efm32g800/: Cargo.toml
pacs/efm32g/efm32g840/: Cargo.toml
pacs/efm32g/efm32g842/: Cargo.toml
pacs/efm32g/efm32g880/: Cargo.toml
pacs/efm32g/efm32g890/: Cargo.toml
pacs/efm32g/src/: lib.rs
pacs/efm32g/src/efm32g200/: mod.rs  msc.rs  rtc.rs
pacs/efm32g/src/efm32g200/cmu/: auxhfrcoctrl.rs  ifc.rs  lfclksel.rs  route.rs
pacs/efm32g/src/efm32g200/dma/: ch0_ctrl.rs  ch1_ctrl.rs  ch2_ctrl.rs  ch3_ctrl.rs  ch4_ctrl.rs  ch5_ctrl.rs  ch6_ctrl.rs  ch7_ctrl.rs
pacs/efm32g/src/efm32g200/prs/: ch0_ctrl.rs  ch1_ctrl.rs  ch3_ctrl.rs  ch4_ctrl.rs  ch7_ctrl.rs
pacs/efm32g/src/efm32g210/: mod.rs  usart1.rs
pacs/efm32g/src/efm32g210/cmu/: lfaclken0.rs  (+2 more)
pacs/efm32g/src/efm32g222/: mod.rs
pacs/efm32g/src/efm32g230/: mod.rs
pacs/efm32g/src/efm32g232/: gpio.rs  mod.rs
pacs/efm32g/src/efm32g280/: mod.rs
pacs/efm32g/src/efm32g290/: dac0.rs  emu.rs  mod.rs
pacs/efm32g/src/efm32g800/: letimer0.rs  mod.rs
pacs/efm32g/src/efm32g840/: mod.rs
pacs/efm32g/src/efm32g842/: lcd.rs  mod.rs  prs.rs
pacs/efm32g/src/efm32g880/: ebi.rs  mod.rs
pacs/efm32g/src/efm32g890/: leuart0.rs  mod.rs  pcnt1.rs
(+143 files in other folders)
